# minesweeper

./: .gitignore  CMakeLists.txt  Grid.hpp  LICENSE  Minefield.cpp  Minefield.hpp  README.md  build.sh  build_mingw.sh  minesweeper.cpp
source/: CMakeLists.txt  Coordinates.hpp  Minefield.cpp  Minefield.hpp  minesweeper.cpp  version.cpp.in  version.hpp  version.hpp.in
tests/: CMakeLists.txt  Minefield_tests.cpp
